--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,5 @@
 @use 'sass:math';
+
 // Google font import
 @font-face {
   font-family: 'Finger Paint';
@@ -15,8 +16,9 @@ canvas {
   cursor: none !important;
 }
 
-body{
+body {
   margin: 0;
+  overflow: auto; // Ensure scrolling is enabled
 }
 
 // Body styles
@@ -97,4 +99,34 @@ body{
   span:nth-of-type(#{$item}) {
     animation-delay: #{math.div($item * 2, 21)}s;
   }
+}
+
+// Custom scrollbar styles
+/* Scrollbar styles */
+::-webkit-scrollbar {
+  width: 12px;  /* Width of the scrollbar */
+  height: 12px; /* Height of the scrollbar on horizontal scroll */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1e90ff; /* Blue color */
+  border-radius: 10px; /* Border radius for rounded corners */
+  transition: background-color 0.3s ease-in-out; /* Smooth transition for hover effect */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #4682b4; /* Darker blue on hover */
+}
+
+::-webkit-scrollbar-track {
+  background: #f0f0f0; /* Light background for the track */
+  border-radius: 10px; /* Border radius for the track */
+}
+
+::-webkit-scrollbar-track-piece {
+  border-radius: 10px; /* Ensure the track's edges are rounded */
+}
+
+::-webkit-scrollbar-corner {
+  background: #f0f0f0; /* Same as the track background */
 }
