--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -118,3 +118,21 @@ a {
   font-size: 1.2rem;
 }
 
+.btn-blue{
+  border: solid 1px cyan;
+  align-self: center;
+  background-color: $color4;
+  color: $color2;
+  text-decoration: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.btn-blue:hover{
+  box-shadow: 0px 0px 6px 6px cyan;
+  background-color: $color2;
+  color: $color4;
+}
+
