--- a/src/styles/numberSection.scss
+++ b/src/styles/numberSection.scss
@@ -1,7 +1,7 @@
 .NumberSectionContainter{
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 40px;
     align-self: center;
     margin-top: 20vh;
     margin-bottom: 20vh;
@@ -9,6 +9,20 @@
 
 .NumberSection{
     border-radius: 10px;
-    box-shadow: 10px 5px 5px 5px rgba($color: #000000, $alpha: 1.0);
-    padding: 20px;
+    box-shadow: 0px 0px 15px 5px #2b55d6;
+    padding: 40px 20px;
+    width: 240px;
+}
+
+.NumberSection i{
+    font-size: 30px;
+}
+
+.NumberSection .Text p:first-child{
+    font-size: 40px;
+    padding: 10px 0px;
+    color: cyan
+}
+.NumberSection .Text p:last-child{
+    font-size: 25px;
 }
