--- a/src/styles/ProjectsExamples.scss
+++ b/src/styles/ProjectsExamples.scss
@@ -1,9 +1,27 @@
 .projects-examples{
     align-self: center;
+    justify-self: center;
 
     .project-card{
         
     margin-top: 30px;
+    }
+}
+
+.ProjectsPage{
+    
+    #principal-Title{
+        font-size: 3rem;
+        margin-top: 50px;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+
+    .secondary-Title{
+        font-size: 2.5rem;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        text-align: center;
     }
 }
 
