--- a/src/styles/numberSection.scss
+++ b/src/styles/numberSection.scss
@@ -9,6 +9,7 @@
 }
 
 .NumberSection{
+    text-align: center;
     border-radius: 10px;
     box-shadow: 0px 0px 15px 5px #2b55d6;
     padding: 40px 20px;
